# DoodleJumpCpp

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/learncpp/: ExampleInstrumentedTest.kt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/engine/: camera.h  constants.h  engine.h  game-object.h  item.h  platform.h  player.h  position.h  render-object.h  renderable.h  renderer.h  screen-controller.h
app/src/main/cpp/src/: native-lib.cpp
app/src/main/cpp/src/Engine/: CMakeLists.txt  camera.cpp  engine.cpp  game-object.cpp  item.cpp  platform.cpp  player.cpp  renderer.cpp  screen-controller.cpp
app/src/main/java/com/example/learncpp/: MainActivity.kt
app/src/test/java/com/example/learncpp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
